@@ -3,7 +3,7 @@ AUX openfoam-solvers-1.4.1_p20080328.patch 13843 RMD160 0b00d42d4122e3d83f5bf1ba
 AUX openfoam-solvers-compile-1.4.1_p20080328.patch 996 RMD160 0debfeb112bed547317d8d61a3fbdae1490050ba SHA1 87c9b4ace94e4eb7b0c16a39e041ec72fca7877e SHA256 1e6062ff63e4367067c229cc8348f5bbd5e6e96f2b9f109bbacb73f3f16310d5
 DIST OpenFOAM-1.4.1.General.gtgz 148526808 RMD160 e25d8bdfa63f15eeeb7b9f1cef09cc26fb7bef74 SHA1 56bbbf5b33c49d08cda35088a65b24d7dc59014f SHA256 c765b36639b42c737bc9ba1ac13c0f66efe20ee4a9f71a6ef987e86ebd50da28
 DIST OpenFOAM-1.5.General.gtgz 117334661 RMD160 bccaa9f8f99d31aa6c791d40b30dd9ad4f534041 SHA1 3577f562dc1f54bb32e1e0ef43f979418212c2f7 SHA256 d4cba2d9475523a53cea80b8d39da70d12bfffb9f46e2d1442946ba4a23efd31
-EBUILD openfoam-solvers-1.4.1_p20080328.ebuild 2623 RMD160 8750fa3d6041cb2b436235d13b10001e6bfaa1a9 SHA1 b0e98618cd25792f4b00e775c456ea96587e33f1 SHA256 139e000ade2545299e7f005f48b8366ad1bc86c074ed0176fdceb0f95395caea
-EBUILD openfoam-solvers-1.5.ebuild 1798 RMD160 d617102e6c9ea2082dbb1b1aaa2c59ba9ce43d30 SHA1 62d14ecac90aad012639493aabe25f921c731995 SHA256 8f6b734d971752fa49a10c3ab1e6dc6377d96a9c1b58fdec7e28a88e49c0f761
-MISC ChangeLog 1371 RMD160 cf35567f3d4a1cd614465af3bf13ddbb88406294 SHA1 4bfe7bc83a6e72744ba05900ada1aab019be8bc5 SHA256 8cace14c115fafe9ce89374a76905d1ec7294da643cff1e5b48735883e88253f
+EBUILD openfoam-solvers-1.4.1_p20080328.ebuild 2624 RMD160 f61aec1dcf80aa4295ad894ede2af3ba1bab136c SHA1 6a7b3701e3d39744484afe69de684e7d9075ead7 SHA256 567fb499cd396e9058a56e60b5b0ab4a4f03c64bdd0fe3bd9c1de41b5ecddbd4
+EBUILD openfoam-solvers-1.5.ebuild 1820 RMD160 166913ae0572bfb57c327eff0d84f4be932cf658 SHA1 276ec3d920d1564cef01861daf86971cbbfda41f SHA256 f3f4506810142d9f7a7a59d8626ddcb11fd1a6e9f67a531a77033c1a5cb5dcf8
+MISC ChangeLog 1529 RMD160 068bd2e5b94f76273524a61457b7b24e6213480f SHA1 023bed95798355ae59ad73bf1759d7f99414dd38 SHA256 629568cc56e99d23c505f160ac322fffd2fb54dd318172936f4244d69c49a984
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
