@@ -17,11 +17,10 @@ SLOT="0"
 KEYWORDS="~amd64 ~x86"
 IUSE=""
 
-RDEPEND="!sci-libs/openfoam
-	!sci-libs/openfoam-bin
+DEPEND="!=sci-libs/openfoam-${MY_PV}*
+	!=sci-libs/openfoam-bin-${MY_PV}*
 	<virtual/jdk-1.5
-	>=sci-libs/openfoam-kernel-${MY_PV}"
-DEPEND="${RDEPEND}"
+	=sci-libs/openfoam-kernel-${MY_PV}*"
 
 S=${WORKDIR}/${MY_P}
 INSDIR="/usr/$(get_libdir)/${MY_PN}/${MY_P}"
